feat: increase acting name

--- a/app/src/translations/eng/default.json
+++ b/app/src/translations/eng/default.json
@@ -13,7 +13,9 @@
     "acting": {
         "button": "Contact",
         "trabalhista": "LABOR",
-        "tributario": "TAX"
+        "tributario": "TAX",
+        "regulatorio": "REGULATORY AND STRATEGIC COMPLIANCE"
+        
     },
     "team": {
         "title": "Team",
